# netology_qt

chart_lab/: CMakeLists.txt  chartform.cpp  chartform.h  chartform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
charts/: mainwindow.cpp
database/: CMakeLists.txt  database.cpp  database.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
diploma_airport_inspector/airport_inspector/: CMakeLists.txt  database_reader.cpp  database_reader.h  db_info_handler.cpp  db_info_handler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
pre_concurrent/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
registration_form/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
rot13_decoder/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
stop_watch_app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
tcp_socket/: mainwindow.cpp  mainwindow.h  structs.h  tcpclient.cpp  tcpclient.h
try_qt_sql/: CMakeLists.txt  main.cpp
udp_socket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
